:art: refactor : ChessBoard를 Map 자료구조로 바꾸고, 이동 가능 여부를 판단하는 로직 리팩토링